--- a/Aula3sub.ipynb
+++ b/Aula3sub.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Aula3sub",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNdNs0BAGec35MWpy/JK8Hg",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Silviorlr/AULA-LPC1-/blob/main/Aula3sub.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 2,
