--- a/Aula3sub.ipynb
+++ b/Aula3sub.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Aula3sub",
       "provenance": [],
-      "authorship_tag": "ABX9TyNdNs0BAGec35MWpy/JK8Hg",
+      "authorship_tag": "ABX9TyOaaLe3gAopwKkqgwklRpkJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yBmg1WLWBGv4",
-        "outputId": "5a09f956-6992-4ac2-e876-731a5b305f6e"
+        "outputId": "2a415600-ec7e-45a4-d9ad-6def95309c67"
       },
       "outputs": [
         {
@@ -48,8 +48,8 @@
       ],
       "source": [
         "# ETE PORTO DIGITAL\n",
-        "# DISCIPLINA: PLPC1\n",
-        "# PROFESSOR: CLOVIS\n",
+        "# DISCIPLINA: LPC1\n",
+        "# PROFESSOR: CLOVES\n",
         "# ESTUDANTE: SILVIO RICARDO\n",
         "\n",
         "print (\"Olá, ETE PORTO DIGITAL!\")"
